@@ -1,3 +1,8 @@
+2009-07-21  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/x86_64/multiarch/strstr.c: Minor cleanups.  Remove
+	unnecesary variables.  Comment fixes.
+
 2009-07-20  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/x86_64/multiarch/strstr.c [USE_AS_STRCASESTR] (STRSTR_SSE42):
